--- a/package.json
+++ b/package.json
@@ -1,15 +1,18 @@
 {
   "name": "trello-to-adpiler",
   "version": "1.0.0",
-  "type": "module",
+  "description": "Webhook to upload Trello card data to AdPiler",
   "main": "api/upload-to-adpiler.js",
+  "type": "module",
   "scripts": {
     "start": "node api/upload-to-adpiler.js"
   },
   "dependencies": {
-    "express": "^4.18.2",
-    "node-fetch": "^3.3.2",
+    "axios": "^1.6.7",
+    "csv-parse": "^5.5.5",
+    "express": "^4.19.2",
     "form-data": "^4.0.0",
-    "csvtojson": "^2.0.10"
+    "node-fetch": "^3.3.2",
+    "sharp": "^0.33.3"
   }
 }
