--- a/package.json
+++ b/package.json
@@ -8,12 +8,13 @@
     "start": "node api/upload-to-adpiler.js"
   },
   "dependencies": {
-    "axios": "^1.6.7",
-    "csv-parse": "^5.5.5",
-    "express": "^4.19.2",
-    "form-data": "^4.0.0",
-    "node-fetch": "^3.3.2",
-    "sharp": "^0.33.3"
-  }
+  "axios": "^1.6.7",
+  "csv-parse": "^5.5.5",
+  "express": "^4.19.2",
+  "form-data": "^4.0.0",
+  "node-fetch": "^3.3.2",
+  "sharp": "^0.33.3",
+  "image-size": "^1.0.2"
 }
+
 
