--- a/package.json
+++ b/package.json
@@ -1,20 +1,20 @@
 {
   "name": "trello-to-adpiler",
   "version": "1.0.0",
-  "description": "Webhook to upload Trello card data to AdPiler",
+  "description": "Trello to AdPiler webhook service",
   "main": "api/upload-to-adpiler.js",
   "type": "module",
   "scripts": {
     "start": "node api/upload-to-adpiler.js"
   },
   "dependencies": {
-  "axios": "^1.6.7",
-  "csv-parse": "^5.5.5",
-  "express": "^4.19.2",
-  "form-data": "^4.0.0",
-  "node-fetch": "^3.3.2",
-  "sharp": "^0.33.3",
-  "image-size": "^1.0.2"
+    "axios": "^1.6.7",
+    "csv-parse": "^5.5.5",
+    "express": "^4.19.2",
+    "form-data": "^4.0.0",
+    "node-fetch": "^3.3.2",
+    "sharp": "^0.33.3",
+    "image-size": "^1.0.2"
+  }
 }
-
 
