--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "form-data": "^4.0.0",
     "node-fetch": "^3.3.2",
     "sharp": "^0.33.3",
-    "image-size": "^1.0.2"
+    "image-size": "^1.0.2",
+    "file-type": "^20.1.0"
   }
 }
 
