--- a/package.json
+++ b/package.json
@@ -8,14 +8,11 @@
     "start": "node api/upload-to-adpiler.js"
   },
   "dependencies": {
-    "axios": "^1.6.7",
-    "csv-parse": "^5.5.5",
-    "express": "^4.19.2",
-    "form-data": "^4.0.0",
-    "node-fetch": "^3.3.2",
-    "sharp": "^0.33.3",
-    "image-size": "^1.0.2",
-    "file-type": "^20.1.0"
-  }
+  "express": "^4.18.2",
+  "node-fetch": "^3.3.2",
+  "image-size": "^1.0.2",
+  "file-type": "^18.0.0",
+  "form-data": "^4.0.0"
 }
+
 
