--- a/package.json
+++ b/package.json
@@ -1,17 +1,17 @@
 {
   "name": "trello-to-adpiler",
   "version": "1.0.0",
-  "main": "api/upload-to-adpiler.js",
   "type": "module",
+  "main": "api/upload-to-adpiler.js",
   "scripts": {
     "start": "node api/upload-to-adpiler.js"
   },
   "dependencies": {
     "express": "^4.18.2",
+    "form-data": "^4.0.0",
     "node-fetch": "^3.3.2",
     "image-size": "^1.0.2",
-    "file-type": "^18.0.0",
-    "form-data": "^4.0.0"
+    "file-type": "^18.1.0"
   }
 }
 
