--- a/package.json
+++ b/package.json
@@ -8,9 +8,9 @@
   },
   "dependencies": {
     "express": "^4.18.2",
-    "node-fetch": "^3.3.2",
     "form-data": "^4.0.0",
-    "file-type": "^18.1.0",
-    "image-size": "^1.0.2"
+    "node-fetch": "^3.3.2",
+    "image-size": "^1.0.2",
+    "file-type": "^18.1.0"
   }
 }
