--- a/package.json
+++ b/package.json
@@ -6,11 +6,13 @@
   "scripts": {
     "start": "node api/upload-to-adpiler.js"
   },
+{
   "dependencies": {
     "express": "^4.18.2",
-    "form-data": "^4.0.0",
     "node-fetch": "^3.3.2",
-    "image-size": "^1.0.2",
-    "file-type": "^18.1.0"
+    "form-data": "^4.0.0",
+    "file-type": "^18.0.0",
+    "csvtojson": "^2.0.10"
   }
 }
+
