--- a/package.json
+++ b/package.json
@@ -6,13 +6,11 @@
   "scripts": {
     "start": "node api/upload-to-adpiler.js"
   },
-{
   "dependencies": {
+    "csvtojson": "^2.0.10",
     "express": "^4.18.2",
-    "node-fetch": "^3.3.2",
     "form-data": "^4.0.0",
-    "file-type": "^18.0.0",
-    "csvtojson": "^2.0.10"
+    "node-fetch": "^3.3.2"
   }
 }
 
