--- a/package.json
+++ b/package.json
@@ -7,10 +7,9 @@
     "start": "node api/upload-to-adpiler.js"
   },
   "dependencies": {
-    "csvtojson": "^2.0.10",
     "express": "^4.18.2",
     "form-data": "^4.0.0",
-    "node-fetch": "^3.3.2"
+    "node-fetch": "^3.3.2",
+    "file-type": "^18.0.0"
   }
 }
-
