--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "trello-to-adpiler",
-  "version": "1.0.0",
+  "version": "1.1.0",
   "type": "module",
   "main": "api/upload-to-adpiler.js",
   "scripts": {
@@ -10,6 +10,8 @@
     "express": "^4.18.2",
     "form-data": "^4.0.0",
     "node-fetch": "^3.3.2",
-    "file-type": "^18.0.0"
+    "csvtojson": "^2.0.10",
+    "file-type": "^18.0.0",
+    "image-size": "^1.0.3"
   }
 }
