--- a/package.json
+++ b/package.json
@@ -6,12 +6,9 @@
   "scripts": {
     "start": "node api/upload-to-adpiler.js"
   },
-  "dependencies": {
-    "express": "^4.18.2",
-    "node-fetch": "^3.3.2",
-    "form-data": "^4.0.0",
-    "csvtojson": "^2.0.10",
-    "file-type": "^18.0.0",
-    "image-size": "^1.0.0"
-  }
+"dependencies": {
+  "express": "^4.18.2",
+  "node-fetch": "^3.3.2",
+  "form-data": "^4.0.0",
+  "csvtojson": "^2.0.10"
 }
