--- a/package.json
+++ b/package.json
@@ -11,5 +11,8 @@
     "node-fetch": "^3.3.2",
     "form-data": "^4.0.0",
     "csvtojson": "^2.0.10"
+  },
+  "engines": {
+    "node": ">=18"
   }
 }
