--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "trello-to-adpiler",
+  "name": "trello-adpiler-uploader",
   "version": "1.0.0",
   "type": "module",
   "main": "api/upload-to-adpiler.js",
@@ -8,11 +8,9 @@
   },
   "dependencies": {
     "express": "^4.18.2",
-    "node-fetch": "^3.3.2",
+    "node-fetch": "^3.4.0",
     "form-data": "^4.0.0",
-    "csvtojson": "^2.0.10"
-  },
-  "engines": {
-    "node": ">=18"
+    "csvtojson": "^2.0.10",
+    "dotenv": "^16.0.3"
   }
 }
