--- a/package.json
+++ b/package.json
@@ -6,9 +6,12 @@
   "scripts": {
     "start": "node api/upload-to-adpiler.js"
   },
+  "engines": {
+    "node": ">=18.0.0"
+  },
   "dependencies": {
     "express": "^4.18.2",
-    "node-fetch": "^3.4.0",
+    "node-fetch": "^3.3.1",
     "form-data": "^4.0.0",
     "csvtojson": "^2.0.10",
     "dotenv": "^16.0.3"
