--- a/package.json
+++ b/package.json
@@ -13,7 +13,6 @@
     "express": "^4.18.2",
     "node-fetch": "^3.3.1",
     "form-data": "^4.0.0",
-    "csvtojson": "^2.0.10",
-    "dotenv": "^16.0.3"
+    "csvtojson": "^2.0.10"
   }
 }
