--- a/package.json
+++ b/package.json
@@ -1,18 +1,16 @@
 {
-  "name": "trello-adpiler-uploader",
+  "name": "trello-to-adpiler",
   "version": "1.0.0",
-  "type": "module",
-  "main": "api/upload-to-adpiler.js",
+  "description": "Automated Trello to AdPiler uploader",
+  "main": "server.js",
+  "type": "commonjs",
   "scripts": {
-    "start": "node api/upload-to-adpiler.js"
-  },
-  "engines": {
-    "node": ">=18.0.0"
+    "start": "node server.js"
   },
   "dependencies": {
-    "express": "^4.18.2",
-    "node-fetch": "^3.3.1",
-    "form-data": "^4.0.0",
-    "csvtojson": "^2.0.10"
+    "axios": "^1.6.0",
+    "body-parser": "^1.20.2",
+    "dotenv": "^16.3.1",
+    "express": "^4.18.2"
   }
 }
