--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "trello-to-adpiler",
   "version": "1.0.0",
-  "description": "Webhook server to upload Trello card attachments to AdPiler",
+  "description": "Auto-upload Trello card attachments to AdPiler when moved to a specific list.",
   "main": "server.js",
   "scripts": {
     "start": "node server.js"
@@ -10,7 +10,13 @@
     "axios": "^1.6.8",
     "body-parser": "^1.20.2",
     "csvtojson": "^2.0.10",
-    "dotenv": "^16.4.5",
-    "express": "^4.19.2"
-  }
+    "dotenv": "^16.3.1",
+    "express": "^4.18.2",
+    "form-data": "^4.0.0"
+  },
+  "engines": {
+    "node": ">=16.0.0"
+  },
+  "author": "Your Name",
+  "license": "MIT"
 }
