--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "dotenv": "^16.3.1",
     "express": "^4.19.2",
     "form-data": "^4.0.0",
-    "node-fetch": "^2.6.7"
+    "node-fetch": "^2.6.7",
+    "sharp": "^0.32.3"
   }
 }
+
