--- a/package.json
+++ b/package.json
@@ -1,17 +1,18 @@
 {
   "name": "trello-to-adpiler",
-  "version": "1.0.0",
+  "version": "1.2.0",
   "main": "server.js",
-  "scripts": {
-    "start": "node server.js"
-  },
+  "type": "commonjs",
+  "scripts": { "start": "node server.js" },
   "dependencies": {
+    "body-parser": "^1.20.2",
     "csvtojson": "^2.0.10",
-    "dotenv": "^16.3.1",
+    "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "form-data": "^4.0.0",
-    "node-fetch": "^2.6.7",
-    "sharp": "^0.32.3"
+    "node-fetch": "^2.7.0",
+    "puppeteer-core": "^22.15.0"
   }
 }
+
 
