--- a/package.json
+++ b/package.json
@@ -1,9 +1,11 @@
 {
   "name": "trello-to-adpiler",
-  "version": "1.2.0",
+  "version": "1.3.0",
   "main": "server.js",
   "type": "commonjs",
-  "scripts": { "start": "node server.js" },
+  "scripts": {
+    "start": "node server.js"
+  },
   "dependencies": {
     "body-parser": "^1.20.2",
     "csvtojson": "^2.0.10",
@@ -14,5 +16,6 @@
     "puppeteer-core": "^22.15.0"
   }
 }
+
 
 
